🖌️Logo added, style updated, pages updated🖌️

--- a/pages/loginPage.html
+++ b/pages/loginPage.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div class="app-info-container">
-        <img src="../assets/images/app-logo.png" alt="Logo do aplicativo">
-        <h1>NutriLife</h1>
+        <img src="../assets/images/NutriLife-logo.png" alt="Logo do aplicativo">
+        <!-- <h1 >NutriLife</h1> -->
     </div>
     <div class="login-container">
-        <h2>Entrar</h2>
+        <!-- <h2>Entrar</h2> -->
         <form>
             <input type="email" name="email" placeholder="Email" required>
-            <input type="password" name="password" placeholder="Senha" required>
+            <input style="margin-top: 35px;" type="password" name="password" placeholder="Senha" required>
             <div class="forgot-password">
                 <p><a href="#">Esqueceu a senha?</a></p>
             </div>
@@ -30,6 +30,6 @@
         </div>
     </div>
 
-    <script src="../scripit/script.js"></script>
+    <script src="../script/script.js"></script>
 </body>
 </html>
