--- a/pages/registerPage.html
+++ b/pages/registerPage.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <div class="app-info-container">
-        <img src="../assets/images/app-logo.png" alt="Logo do aplicativo">
-        <h1>NutriLife</h1>
+        <img src="../assets/images/NutriLife-logo.png" alt="Logo do aplicativo">
+        <!-- <h1>NutriLife</h1> -->
     </div>
     <div class="register-container">
         <h2>Registrar-se</h2>
         <p>Parece que você ainda não tem uma conta. Vamos criar uma para você.</p>
         <form>
             <input type="text" name="text" placeholder="Nome" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="password" name="password" placeholder="Senha" required>
+            <input style="margin-top: 20px;" type="email" name="email" placeholder="Email" required>
+            <input style="margin-top: 20px;" type="password" name="password" placeholder="Senha" required>
             <div class="forgot-password">
             </div>
         </form>
