--- a/pages/registerFoodPage.html
+++ b/pages/registerFoodPage.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#466546"/>
+    <link rel="icon" type="image/png" href="/assets/images/app-icon.png">
+    <meta name="description" content="Category: Healthy Food">
     <link rel="stylesheet" href="../style/registerFoodPage.css">
     <link rel="stylesheet" href="../style/variables.css">
-    <title>Cadastro</title>
+    <title>NutriLife</title>
 </head>
 <body>
     <header>
