--- a/pages/index.html
+++ b/pages/index.html
@@ -2,8 +2,11 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="theme-color" content="#466546"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/index.css">
+    <link rel="icon" type="image/png" href="/assets/images/app-icon.png">
+    <meta name="description" content="Category: Healthy Food">
     <link rel="stylesheet" href="../style/variables.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
