--- a/pages/registeredFoodPage.html
+++ b/pages/registeredFoodPage.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alimentação</title>
+    <meta name="theme-color" content="#466546"/>
+    <link rel="icon" type="image/png" href="/assets/images/app-icon.png">
+    <meta name="description" content="Category: Healthy Food">
     <link rel="stylesheet" href="../style/registeredFoodPage.css">
     <link rel="stylesheet" href="../style/variables.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+    <title>NutriLife</title>
 </head>
 <body>
     <header>
