atualizações no mapa

--- a/pages/index.html
+++ b/pages/index.html
@@ -36,6 +36,7 @@
 
     <div id="mapa" class="mapa-box">
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+        <script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.js"></script>
     </div>
 
 
