🖌️Register Preferences Page created🖌️

--- a/pages/cookingTipsPage.html
+++ b/pages/cookingTipsPage.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#466546"/>
     <link rel="icon" type="image/png" href="/assets/images/app-icon.png">
     <meta name="description" content="Category: Healthy Food">
-    <link rel="stylesheet" href="../style/dicasCulinariasPage.css">
+    <link rel="stylesheet" href="../style/cookingTipsPage.css">
     <link rel="stylesheet" href="../style/variables.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
     <title>NutriLife</title>
@@ -20,7 +20,7 @@
                   </svg>
             </a>         
         </div>
-        <h1>Dicas culinárias</h1>
+        <h1>Dicas Culinárias</h1>
     </header>
 
 
@@ -28,5 +28,5 @@
     </div>
     
 </body>
-<script src="../script/dicasCulinarias.js"></script>
+<script src="../script/cookingTips.js"></script>
 </html>
