--- a/pages/index.html
+++ b/pages/index.html
@@ -17,7 +17,7 @@
     <div class="sidebar" id="mySidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="#">Meu Perfil</a>
-        <a href="./dicasCulináriasPage.html">Dicas culinárias</a>
+        <a href="./cookingTipsPage.html">Dicas culinárias</a>
     </div>
 
     <div class="pesquisa-local">
