--- a/pages/registerPage.html
+++ b/pages/registerPage.html
@@ -33,7 +33,7 @@
             <button onclick="">CRIAR CONTA</button>
         </div>
         <div class="login-link">
-            <p>Já tem uma conta? <a href="./loginPage.html">Entre</a></p>
+            <p>Já tem uma conta? <a href="../loginPage.html">Entre</a></p>
         </div>
     </div>
 </body>
