--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content="#466546"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/index.css">
+    <link rel="stylesheet" href="../style/home.css">
     <link rel="icon" type="image/png" href="/assets/images/app-icon.png">
     <meta name="description" content="Category: Healthy Food">
     <link rel="stylesheet" href="../style/variables.css">
