--- a/pages/registerPage.html
+++ b/pages/registerPage.html
@@ -33,7 +33,7 @@
             <button onclick="register()">CRIAR CONTA</button>
         </div>
         <div class="login-link">
-            <p>Já tem uma conta? <a href="../loginPage.html">Entre</a></p>
+            <p>Já tem uma conta? <a href="../index.html">Entre</a></p>
         </div>
     </div>
     <script src="/script/script.js"></script>
