--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#466546"/>
     <link rel="icon" type="image/png" href="/assets/images/app-icon.png">
     <meta name="description" content="Category: Healthy Food">
-    <link rel="stylesheet" href="style/loginPage.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="style/variables.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
     <title>NutriLife</title>
@@ -31,6 +31,6 @@
         </div>
     </div>
 
-    <script src="script/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
