--- a/index.html
+++ b/index.html
@@ -36,27 +36,9 @@
 
         
   <script>
-    let newWorker;
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('./sw.js').then(reg => {
-        reg.addEventListener('updatefound', () => {
-          newWorker = reg.installing;
-        });
-      });
-      let refreshing;
-
-navigator.serviceWorker.register('./sw.js').then(reg => {
-  reg.addEventListener('updatefound', () => {
-    const newWorker = reg.installing;
-    newWorker.addEventListener('statechange', () => {
-      if (newWorker.state === 'activated' && !refreshing) {
-        window.location.reload();
-        refreshing = true;
-      }
-    });
-  });
-});
-    }
+     if (typeof navigator.serviceWorker !== 'undefined') {
+    navigator.serviceWorker.register('sw.js')
+  }
   </script>
 
 </body>
