--- a/pages/dietaryRestrictionsPage.html
+++ b/pages/dietaryRestrictionsPage.html
@@ -80,7 +80,7 @@
         
     </div>
     <div class="submit-button">
-        <button onclick="login()">Cadastrar</button>
+        <button onclick="window.location.href='home.html'">Cadastrar</button>
     </div> 
     </div>
     
