--- a/pages/registerPage.html
+++ b/pages/registerPage.html
@@ -22,11 +22,11 @@
     <h2>Registrar-se</h2>
     <p>Parece que você ainda não tem uma conta. Vamos criar uma para você.</p>
     <form id="form-cadastrer">
-      <input type="email" name="email" placeholder="Email" required />
       <input type="text" name="name" placeholder="Nome" required />
+      <input type="email" name="email" placeholder="Email" required />
       <input type="password" name="password" placeholder="Senha" required />
-      <input placeholder="Selecionar Preferências" onclick="togglePreferences()">
-   
+      <!-- <input placeholder="Selecionar Preferências" onclick="togglePreferences()"> -->
+<!--    
     <div id="preferences-container">
       <div class="overlay" id="overlay" onclick="togglePreferences()"></div> 
       <div class="preferences-form"> 
@@ -94,8 +94,8 @@
         </form>
       </div>
     </div>
-  </form>
-    <div id="message"></div>
+  </form> -->
+    <!-- <div id="message"></div> -->
     <div class="privacy-politic-text">
       <p style="margin-top: 30px">
         Ao pressionar Criar Conta abaixo, eu concordo com os
@@ -106,6 +106,7 @@
       <button onclick="cadastrarUsuario()" type="submit">
         Criar Conta
       </button>
+      <!-- <button onclick="window.location.href='foodRestrictionPage.html'">Criar Conta</button> -->
     </div>
     <div class="login-link">
       <p>Já tem uma conta? <a href="../index.html">Entre</a></p>
