commit contendo a inclusão do beckend do projeto

--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
-
         
   <script>
      if (typeof navigator.serviceWorker !== 'undefined') {
@@ -42,4 +40,7 @@
   </script>
 
 </body>
+
+
+<script src="./script/authUsers.js"></script>
 </html>
