--- a/pages/userProfile.html
+++ b/pages/userProfile.html
@@ -53,19 +53,8 @@
       <button type="submit">Salvar Mudanças</button>
     </div>
 
-    <script>
-      function togglePasswordVisibility() {
-        const passwordField = document.getElementById("password");
-        const showPasswordCheckbox = document.getElementById(
-          "show-password-checkbox"
-        );
-        if (showPasswordCheckbox.checked) {
-          passwordField.type = "text";
-        } else {
-          passwordField.type = "password";
-        }
-      }
-    </script>
+    
   </body>
+  <script src="../script/userProfilePage.js"></script>
 </html>
 
