--- a/pages/userProfile.html
+++ b/pages/userProfile.html
@@ -28,6 +28,9 @@
       </div>
       <h1>Perfil do Usuário</h1>
     </header>
+
+    <div class="form">
+
     <form class="profile-form">
       <h3>Nome:</h3>
       <input type="text" id="name" name="name" required />
@@ -35,7 +38,7 @@
       <h3>Email:</h3>
       <input type="email" id="email" name="email" required />
 
-      <h3>Senha:</h3>
+      <!-- <h3>Senha:</h3>
       <input type="password" id="password" name="password" required />
       <div class="show-password">
         <input
@@ -44,11 +47,9 @@
           onclick="togglePasswordVisibility()"
         />
         <label for="show-password-checkbox">Mostrar senha</label>
-      </div>
-
-      <h3 style="margin-top: 30px">Data de Nascimento:</h3>
-      <input type="date" id="birthdate" name="birthdate" required />
+      </div> -->
     </form>
+  </div>
     <div class="button-update">
       <button type="submit">Salvar Mudanças</button>
     </div>
