--- a/pages/registeredFoodPage.html
+++ b/pages/registeredFoodPage.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#466546"/>
-    <link rel="icon" type="image/png" href="/assets/images/app-icon.png">
-    <meta name="description" content="Category: Healthy Food">
-    <link rel="stylesheet" href="../style/registeredFoodPage.css">
-    <link rel="stylesheet" href="../style/variables.css">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#466546" />
+    <link rel="icon" type="image/png" href="/assets/images/app-icon.png" />
+    <meta name="description" content="Category: Healthy Food" />
+    <link rel="stylesheet" href="../style/registeredFoodPage.css" />
+    <link rel="stylesheet" href="../style/variables.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>NutriLife</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="return-arrow">
-            <a href="home.html">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
-                  </svg>
-            </a>         
-        </div>
-        <h1>Refeições Cadastradas</h1>
+      <div class="return-arrow">
+        <a href="home.html">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            fill="currentColor"
+            class="bi bi-arrow-left"
+            viewBox="0 0 16 16"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"
+            />
+          </svg>
+        </a>
+      </div>
+      <h1>Refeições Cadastradas</h1>
     </header>
-    
-    <div class="card-container">
-    </div>
 
-</body>
-<script src="../script/registeredFood.js"></script>
+    <div class="card-container"></div>
+  </body>
+  <script src="../script/registeredFood.js"></script>
 </html>
